# light-legion-sample

./: Cargo.toml
src/: main.rs  thirsty.rs
